objects/SubProject_Product__c.object
<CustomObject>
    <description>Junction object to associate Products with a SubProject.</description>
    <fields>
        <fullName>Dealership_Need__c</fullName>
        <formula>Product__r.Solution__r.Question_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership Need</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>SubProjects</relationshipLabel>
        <relationshipName>SubProject_Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <formula>Product__r.Solution__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject__c</fullName>
        <label>SubProject</label>
        <referenceTo>SubProject__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>SubProject_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SubProject Product</label>
    <nameField>
        <displayFormat>SPPID-{0000000000}</displayFormat>
        <label>SubProject Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SubProject Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>